kubernetes/apps/servarr/deployment/resources/jellyfin-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-buffering
  namespace: servarr
spec:
  buffering:
    maxRequestBodyBytes: 0
