kubernetes/apps/servarr/deployment/resources/jellyfin-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-buffering
  namespace: servarr
spec:
  buffering:
    maxRequestBodyBytes: 0

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-httproute
  namespace: servarr
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress
    sectionName: websecure
  hostnames:
  - "jellyfin.media.fonzdm.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: jellyfin-buffering
    backendRefs:
    - name: jellyfin
      port: 8096 

---
      
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproutes-from-servarr
  namespace: ingress
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: servarr
  to:
  - group: ""
    kind: Service
